# linux-clipboard-manager

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  FINAL_STATUS.md  GUI_PREVIEW.md  HOTKEY_TROUBLESHOOTING.md  INSTALLATION_GUIDE.md  INSTALLATION_REPORT.md  LAPTOP_SETUP.md  Makefile  PROJECT_SUMMARY.md  PUBLISHING.md  PUBLISHING_COMPLETE.md  PUBLISHING_STATUS.md  QUICKSTART.md  README.md  README_old.md  TRANSFER_TO_LAPTOP.md  TRUSTED_PUBLISHING_STATUS.md  demo.py  diagnose_hotkey.py  install-system.sh  install.sh  linux-clipboard-manager.service  main.py  main_with_button.py  pyproject.toml  quick-pypi-setup.sh  run.sh  run_headless.py  setup-pypi-token.sh  setup-pypi.sh  setup.py  smart-clipboard.service  test_headless.py  test_hotkey.py  verify-setup.sh  verify_installation.py
.github/workflows/: publish.yml  test.yml
src/: config.py
